--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -206,10 +206,10 @@ body {
         <div class="modal-content">
             <div class="modal-header">
                 <span class="close">&times;</span>
-                <h3>Prediction Result</h3>
+                <h3 style="display:flex; justify-content: center;">Prediction Result</h3>
             </div>
             <div class="modal-body">
-                <p id="predictionText"></p>
+                <p id="predictionText" style="display:flex; justify-content: center;"></p>
             </div>
             <div class="modal-footer">
                 <button class="close">Close</button>
